--- a/app/views/devise/shared/_links.html.erb
+++ b/app/views/devise/shared/_links.html.erb
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container d-flex justify-content-around mx-2 mt-3 render-links">
 <%- if controller_name != 'sessions' %>
   <%= link_to "Se connecter", new_session_path(resource_name) %><br />
 <% end %>
