--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,40 +1,44 @@
-<div class="container">
-  <h2>Formulaire d'inscription</h2>
+<%= link_to :back do %>
+  <i class="fa-solid fa-arrow-left fa-2x mx-4 mt-4"></i>
+<% end %>
 
-  <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), data: {turbo: false}) do |f| %>
-    <%= f.error_notification %>
+  <div class="form-container text-center mt-3">
+    <h2 class= "my-2">Formulaire d'inscription</h2>
 
-    <div class="form-inputs">
-    <%= f.input :last_name,
-                  label: 'Nom',
-                  required: true,
-                  autofocus: true,
-                  input_html: { autocomplete: "last_name" }%>
-    <%= f.input :first_name,
-                  label: 'Prénom',
-                  required: true,
-                  autofocus: true,
-                  input_html: { autocomplete: "first_name" }%>
-      <%= f.input :email,
-                  required: true,
-                  autofocus: true,
-                  input_html: { autocomplete: "email" }%>
-      <%= f.input :password,
-                  label: 'Mot de passe',
-                  required: true,
-                  hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length),
-                  input_html: { autocomplete: "new-password" } %>
-      <%= f.input :password_confirmation,
-                  label: 'Confirmation du mot de passe',
-                  required: true,
-                  input_html: { autocomplete: "new-password" } %>
-      <%= f.input :photo, as: :file %>
-    </div>
+    <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), data: {turbo: false}) do |f| %>
+      <%= f.error_notification %>
 
-    <div class="form-actions btn-flat-connexion">
-      <%= f.button :submit, "Inscription" %>
-    </div>
-  <% end %>
+      <div class="form-inputs">
+      <div class="d-flex justify-content-between">
+        <%= f.input :first_name,
+                      label: 'Prénom',
+                      required: true,
+                      autofocus: true,
+                      input_html: { autocomplete: "first_name" }%>
+          <%= f.input :last_name,
+                      label: 'Nom',
+                      required: true,
+                      autofocus: true,
+                      input_html: { autocomplete: "last_name", class: "mx-1"}%>
+        </div>
+        <%= f.input :email,
+                    required: true,
+                    autofocus: true,
+                    input_html: { autocomplete: "email" }%>
+        <%= f.input :password,
+                    label: 'Mot de passe',
+                    required: true,
+                    hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length),
+                    input_html: { autocomplete: "new-password" } %>
+        <%= f.input :password_confirmation,
+                    label: 'Confirmation du mot de passe',
+                    required: true,
+                    input_html: { autocomplete: "new-password" } %>
+        <%= f.input :photo, as: :file %>
+      </div>
 
-  <%= render "devise/shared/links" %>
-</div>
+      <div class="form-actions btn-flat w-100">
+        <%= f.button :submit, "Inscription" %>
+      </div>
+    <% end %>
+  </div>
