adding fullscreen footer on devise

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,8 +1,9 @@
-<%= link_to :back do %>
-  <i class="fa-solid fa-arrow-left fa-2x mx-4 mt-4"></i>
-<% end %>
+<div class="d-flex fullscreen_footer">
+  <%= link_to :back do %>
+    <i class="fa-solid fa-arrow-left fa-2x mx-4 mt-4"></i>
+  <% end %>
 
-  <div class="form-container text-center mt-3">
+  <div class="form-container text-center mt-5 ">
     <h2 class= "my-2">Formulaire d'inscription</h2>
 
     <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), data: {turbo: false}) do |f| %>
